[#52352] cleanup